# stat_color

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: data_config.yaml  record.yaml
config/hists/: black_b.hist  blue_g.hist  blue_r.hist  green_b.hist  green_g.hist
config/images/: black_g.hist  black_r.hist  blue_b.hist  green_r.hist  red_b.hist  red_g.hist  red_r.hist
launch/: record_hist.launch  stat_color_detect.launch  test.launch
src/: record_hist.cpp  stat_color.cpp  stat_color_detect.cpp  test_from_image.cpp
srv/: color_shape_detection.srv
